# Kiro-and-gpt-oss-20b-Hackathon-Project

./: .gitignore  LICENSE  README.md
.kiro/specs/ollama-todo-app/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: .env.example  DATABASE_SETUP.md  GOOGLE_CALENDAR_SETUP.md  alembic.ini  pyproject.toml  requirements.txt  test_ollama_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_database_schema.py
backend/app/: main.py
backend/app/api/: __init__.py  calendar.py  chat.py  tasks.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  database.py
backend/app/schemas/: __init__.py  api.py  chat.py  task.py
backend/app/services/: __init__.py  calendar_service.py  ollama_service.py
backend/app/utils/: __init__.py  database.py  validation.py
backend/scripts/: db_manager.py  init_db.py
backend/tests/: test_calendar_api.py  test_calendar_service.py  test_database.py  test_database_connection.py  test_ollama_service.py  test_schemas.py
frontend/: .env.example  ics-demo.html  ics-test.html  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: ErrorBoundary.tsx  Loading.tsx  NotificationSystem.tsx  index.ts
frontend/src/hooks/: index.ts  useCaching.ts  useCalendar.ts  useChat.ts  useHealth.ts  useRealTimeSync.ts  useTasks.ts
frontend/src/schemas/: api.ts  chat.ts  index.ts  task.ts
frontend/src/types/: api.ts  (+4 more)
(+22 files in other folders)
